{
    "name": "AsteroidInput",
    "maps": [
        {
            "name": "ShipControll",
            "id": "74931d51-6d4c-42ca-90f3-dd076c986a3a",
            "actions": [
                {
                    "name": "Thrust",
                    "type": "Button",
                    "id": "0eb79b34-c0c5-435b-8aa6-026e26c6327c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Rotation",
                    "type": "Value",
                    "id": "b6506893-38fd-4736-8656-0265ede0e7fe",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "FireMainWeapon",
                    "type": "Button",
                    "id": "ea0dad20-cda6-4909-b117-14a68450e8a6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "FireAlternativeWeapon",
                    "type": "Button",
                    "id": "c259b227-602d-47ac-9372-a38ef441390f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "24f07758-bc34-4d86-975f-f5f0f826d2ca",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Thrust",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "16f4bc02-dcfc-4317-b2d9-01f517405dc1",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "FireMainWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8f4ba2c7-43db-47ee-a053-67064895307f",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "FireAlternativeWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Rotation",
                    "id": "61e43ee4-243f-4d4b-acf9-58b951480c9e",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotation",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "b79baa5b-c4a1-4db5-a75e-b502f152b16d",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Rotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "75a666f6-6b15-4c1f-916c-c921a018e4d0",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Rotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "MenuControll",
            "id": "9e545072-2da9-4ce5-a205-e247a252494b",
            "actions": [
                {
                    "name": "Enter",
                    "type": "Button",
                    "id": "be51adbe-9be4-48e4-87de-ffae7283e2a4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SelectTop",
                    "type": "Button",
                    "id": "ae110f89-578f-439e-90f4-1cbb9c662560",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SelectDown",
                    "type": "Button",
                    "id": "5bab9f07-0ac6-4f83-8052-b1eacb153c6a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b9b2b0c4-be96-4e26-955d-77e6296d8d95",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Enter",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "90f96784-0285-42a5-99f7-780cdedaea60",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "SelectTop",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "db676013-95c9-4d3c-acf5-879a0534d650",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "SelectDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}